2004-06-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* po/Makevars (XGETTEXT_OPTIONS): Recent intltool now parses the
	Makevars file, thus set this variable to the options we want.

2004-06-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Get rid of the redundant
	-DREGEXXER_LOCALEDIR=\""$(datadir)/locale"\" definition.

	* src/main.cc (locale_directory): New string constant.
	(main): Replace REGEXXER_LOCALEDIR with locale_directory.

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Add -DGTKMM_DISABLE_DEPRECATED.

	* src/filetree.cc (FileTree::FileTree): Replace the deprecated
	set_sort_column_id() by set_sort_column().
	* src/filetreeprivate.cc
	(FileTree::ScopedBlockSorting::ScopedBlockSorting): ditto
	(FileTree::ScopedBlockSorting::~ScopedBlockSorting): ditto.

	* src/mainwindow.cc (MainWindow::on_go_next): Use scroll_to()
	in place of the deprecated scroll_to_mark().

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am (stockimages.h): Strip the directory prefix
	from filenames if present, because of the possibility of automatic
	rule rewriting as done e.g. by SunOS make.

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (dist_noinst_DATA): Add po/LINGUAS.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (apply_label_markup): Make use of the <small>
	convenience tag to simplify the markup slightly.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Include <libglademm/xml.h> instead of the
	whole <libglademm.h> to save a tiny bit of compile time.
	* src/controller.cc: ditto.

	* src/filebuffer.cc: Same here, and also replace <gconfmm.h> by
	<gconfmm/client.h>.
	* src/filetree.cc: ditto
	* src/mainwindow.cc: ditto
	* src/prefdialog.cc: ditto.

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (initialize_gettext): Only call