@@ -4,11 +4,12 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="mainwindow">
+  <property name="title" translatable="yes"></property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
   <property name="default_width">640</property>
-  <property name="default_height">450</property>
+  <property name="default_height">480</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
@@ -67,7 +68,35 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="menuitem_separator1">
+			<widget class="GtkSeparatorMenuItem" id="menuitem_separator1">
+			  <property name="visible">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menuitem_quit">
+			  <property name="visible">True</property>
+			  <property name="label">gtk-quit</property>
+			  <property name="use_stock">True</property>
+			  <accelerator key="q" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+
+	      <child>
+		<widget class="GtkMenuItem" id="menuitem_edit">
+		  <property name="visible">True</property>
+		  <property name="label" translatable="yes">_Edit</property>
+		  <property name="use_underline">True</property>
+
+		  <child>
+		    <widget class="GtkMenu" id="menuitem_edit_menu">
+
+		      <child>
+			<widget class="GtkTearoffMenuItem" id="menuitem_edit_tearoff">
 			  <property name="visible">True</property>
 			</widget>
 		      </child>
@@ -82,7 +111,48 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="menuitem_separator2">
+			<widget class="GtkSeparatorMenuItem" id="menuitem_separator2">
+			  <property name="visible">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menuitem_cut">
+			  <property name="visible">True</property>
+			  <property name="label">gtk-cut</property>
+			  <property name="use_stock">True</property>
+			  <accelerator key="x" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menuitem_copy">
+			  <property name="visible">True</property>
+			  <property name="label">gtk-copy</property>
+			  <property name="use_stock">True</property>
+			  <accelerator key="c" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menuitem_paste">
+			  <property name="visible">True</property>
+			  <property name="label">gtk-paste</property>
+			  <property name="use_stock">True</property>
+			  <accelerator key="v" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkImageMenuItem" id="menuitem_delete">
+			  <property name="visible">True</property>
+			  <property name="label">gtk-delete</property>
+			  <property name="use_stock">True</property>
+			</widget>
+		      </child>
+
+		      <child>
+			<widget class="GtkSeparatorMenuItem" id="menuitem_separator3">
 			  <property name="visible">True</property>
 			</widget>
 		      </child>
@@ -92,21 +162,6 @@
 			  <property name="visible">True</property>
 			  <property name="label">gtk-preferences</property>
 			  <property name="use_stock">True</property>
-			</widget>
-		      </child>
-
-		      <child>
-			<widget class="GtkMenuItem" id="menuitem_separator3">
-			  <property name="visible">True</property>
-			</widget>
-		      </child>
-
-		      <child>
-			<widget class="GtkImageMenuItem" id="menuitem_quit">
-			  <property name="visible">True</property>
-			  <property name="label">gtk-quit</property>
-			  <property name="use_stock">True</property>
-			  <accelerator key="q" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 			</widget>
 		      </child>
 		    </widget>
@@ -137,7 +192,7 @@
 			  <accelerator key="p" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image1">
+			    <widget class="GtkImage" id="image5">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-goto-first</property>
 			      <property name="icon_size">1</property>
@@ -176,7 +231,7 @@
 			  <accelerator key="e" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image2">
+			    <widget class="GtkImage" id="image6">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-goto-last</property>
 			      <property name="icon_size">1</property>
@@ -190,7 +245,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkMenuItem" id="menuitem_separator4">
+			<widget class="GtkSeparatorMenuItem" id="menuitem_separator4">
 			  <property name="visible">True</property>
 			</widget>
 		      </child>
@@ -203,7 +258,7 @@
 			  <accelerator key="r" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image3">
+			    <widget class="GtkImage" id="image7">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-convert</property>
 			      <property name="icon_size">1</property>
@@ -223,7 +278,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image4">
+			    <widget class="GtkImage" id="image8">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-convert</property>
 			      <property name="icon_size">1</property>
@@ -243,7 +298,7 @@
 			  <property name="use_underline">True</property>
 
 			  <child internal-child="image">
-			    <widget class="GtkImage" id="image5">
+			    <widget class="GtkImage" id="image9">
 			      <property name="visible">True</property>
 			      <property name="stock">gtk-convert</property>
 			      <property name="icon_size">1</property>
@@ -561,107 +616,134 @@
 			  <property name="spacing">6</property>
 
 			  <child>
-			    <widget class="GtkCheckButton" id="button_recursive">
+			    <widget class="GtkVBox" id="vbox_options">
 			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Recurse into subdirectories</property>
-			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">recursive</property>
-			      <property name="use_underline">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
-			      <property name="active">True</property>
-			      <property name="inconsistent">False</property>
-			      <property name="draw_indicator">True</property>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
-
-			  <child>
-			    <widget class="GtkCheckButton" id="button_hidden">
-			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Also find hidden files</property>
-			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">hidden</property>
-			      <property name="use_underline">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
-			      <property name="active">False</property>
-			      <property name="inconsistent">False</property>
-			      <property name="draw_indicator">True</property>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
-
-			  <child>
-			    <widget class="GtkButton" id="button_find_files">
-			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Find all files that match the filename pattern</property>
-			      <property name="can_focus">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
+			      <property name="homogeneous">False</property>
+			      <property name="spacing">3</property>
 
 			      <child>
-				<widget class="GtkAlignment" id="alignment_button_find_files">
+				<widget class="GtkCheckButton" id="button_recursive">
 				  <property name="visible">True</property>
-				  <property name="xalign">0.5</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xscale">0</property>
-				  <property name="yscale">0</property>
-				  <property name="top_padding">0</property>
-				  <property name="bottom_padding">0</property>
-				  <property name="left_padding">0</property>
-				  <property name="right_padding">0</property>
+				  <property name="tooltip" translatable="yes">Recurse into subdirectories</property>
+				  <property name="can_focus">True</property>
+				  <property name="label" translatable="yes">recursive</property>
+				  <property name="use_underline">True</property>
+				  <property name="relief">GTK_RELIEF_NORMAL</property>
+				  <property name="focus_on_click">True</property>
+				  <property name="active">True</property>
+				  <property name="inconsistent">False</property>
+				  <property name="draw_indicator">True</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">False</property>
+				  <property name="fill">False</property>
+				</packing>
+			      </child>
+
+			      <child>
+				<widget class="GtkCheckButton" id="button_hidden">
+				  <property name="visible">True</property>
+				  <property name="tooltip" translatable="yes">Also find hidden files</property>
+				  <property name="can_focus">True</property>
+				  <property name="label" translatable="yes">hidden</property>
+				  <property name="use_underline">True</property>
+				  <property name="relief">GTK_RELIEF_NORMAL</property>
+				  <property name="focus_on_click">True</property>
+				  <property name="active">False</property>
+				  <property name="inconsistent">False</property>
+				  <property name="draw_indicator">True</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">False</property>
+				  <property name="fill">False</property>
+				</packing>
+			      </child>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkAlignment" id="alignment_options">
+			      <property name="visible">True</property>
+			      <property name="xalign">1</property>
+			      <property name="yalign">1</property>
+			      <property name="xscale">0</property>
+			      <property name="yscale">0</property>
+			      <property name="top_padding">0</property>
+			      <property name="bottom_padding">0</property>
+			      <property name="left_padding">0</property>
+			      <property name="right_padding">0</property>
+
+			      <child>
+				<widget class="GtkButton" id="button_find_files">
+				  <property name="visible">True</property>
+				  <property name="tooltip" translatable="yes">Find all files that match the filename pattern</property>
+				  <property name="can_focus">True</property>
+				  <property name="relief">GTK_RELIEF_NORMAL</property>
+				  <property name="focus_on_click">True</property>
 
 				  <child>
-				    <widget class="GtkHBox" id="hbox_button_find_files">
+				    <widget class="GtkAlignment" id="alignment_button_find_files">
 				      <property name="visible">True</property>
-				      <property name="homogeneous">False</property>
-				      <property name="spacing">2</property>
+				      <property name="xalign">0.5</property>
+				      <property name="yalign">0.5</property>
+				      <property name="xscale">0</property>
+				      <property name="yscale">0</property>
+				      <property name="top_padding">0</property>
+				      <property name="bottom_padding">0</property>
+				      <property name="left_padding">0</property>
+				      <property name="right_padding">0</property>
 
 				      <child>
-					<widget class="GtkImage" id="image_button_find_files">
+					<widget class="GtkHBox" id="hbox_button_find_files">
 					  <property name="visible">True</property>
-					  <property name="stock">gtk-find</property>
-					  <property name="icon_size">4</property>
-					  <property name="xalign">0.5</property>
-					  <property name="yalign">0.5</property>
-					  <property name="xpad">0</property>
-					  <property name="ypad">0</property>
-					</widget>
-					<packing>
-					  <property name="padding">0</property>
-					  <property name="expand">False</property>
-					  <property name="fill">False</property>
-					</packing>
-				      </child>
+					  <property name="homogeneous">False</property>
+					  <property name="spacing">2</property>
 
-				      <child>
-					<widget class="GtkLabel" id="label_button_find_files">
-					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Find fi_les</property>
-					  <property name="use_underline">True</property>
-					  <property name="use_markup">False</property>
-					  <property name="justify">GTK_JUSTIFY_LEFT</property>
-					  <property name="wrap">False</property>
-					  <property name="selectable">False</property>
-					  <property name="xalign">0.5</property>
-					  <property name="yalign">0.5</property>
-					  <property name="xpad">0</property>
-					  <property name="ypad">0</property>
+					  <child>
+					    <widget class="GtkImage" id="image_button_find_files">
+					      <property name="visible">True</property>
+					      <property name="stock">gtk-find</property>
+					      <property name="icon_size">4</property>
+					      <property name="xalign">0.5</property>
+					      <property name="yalign">0.5</property>
+					      <property name="xpad">0</property>
+					      <property name="ypad">0</property>
+					    </widget>
+					    <packing>
+					      <property name="padding">0</property>
+					      <property name="expand">False</property>
+					      <property name="fill">False</property>
+					    </packing>
+					  </child>
+
+					  <child>
+					    <widget class="GtkLabel" id="label_button_find_files">
+					      <property name="visible">True</property>
+					      <property name="label" translatable="yes">Find fi_les</property>
+					      <property name="use_underline">True</property>
+					      <property name="use_markup">False</property>
+					      <property name="justify">GTK_JUSTIFY_LEFT</property>
+					      <property name="wrap">False</property>
+					      <property name="selectable">False</property>
+					      <property name="xalign">0.5</property>
+					      <property name="yalign">0.5</property>
+					      <property name="xpad">0</property>
+					      <property name="ypad">0</property>
+					    </widget>
+					    <packing>
+					      <property name="padding">0</property>
+					      <property name="expand">False</property>
+					      <property name="fill">False</property>
+					    </packing>
+					  </child>
 					</widget>
-					<packing>
-					  <property name="padding">0</property>
-					  <property name="expand">False</property>
-					  <property name="fill">False</property>
-					</packing>
 				      </child>
 				    </widget>
 				  </child>
